--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ h1 {
   padding: 20px;
   border: 1px solid #aaa9;
   transition: transform 200ms ease;
+  overflow: hidden;
 }
 .card:hover {
   transform: scale(1.05);
@@ -61,14 +62,14 @@ h1 {
   padding: 8px 12px;
   border-radius: 5px;
   cursor: pointer;
-  
+  padding: 1em; 
 }
 
 .card__btn:nth-child(1){
   background-image: url(../public/bx-trash.svg);
   background-color: brown;
   color: white;
-  
+ 
 }
 .card__btn:nth-child(2){
   background-image: url(../public/bx-edit.svg);
